INCLUDE(GNUInstallDirs)
SET(UBUSD_BINARY  "${CMAKE_INSTALL_FULL_SBINDIR}/ubusd")
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/ubus.socket.in ${CMAKE_BINARY_DIR}/ubus.socket)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/ubus.service.in ${CMAKE_BINARY_DIR}/ubus.service)

SET(SYSTEMD_SYSUNIT_DIR "${SYSTEMD_PREFIX}/lib/systemd/system")
INSTALL(FILES ${CMAKE_BINARY_DIR}/ubus.socket ${CMAKE_BINARY_DIR}/ubus.service
	DESTINATION ${SYSTEMD_SYSUNIT_DIR})
